Is master working now?

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "makestuff"]
 	path = makestuff
 	url = https://github.com/dushoff/makestuff.git
+[submodule "1M"]
+	path = 1M
+	url = https://github.com/Bio1M/1M.git
