--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "org"]
 	path = org
 	url = https://github.com/dushoff/org.git
+[submodule "Planning"]
+	path = Planning
+	url = https://github.com/dushoff/Planning.git
